--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -261,23 +261,23 @@ max(1, 3, 4, 2);
 
 Again, the result of the evaluation are printed out. You can see here
 that function in \urbi can be variadic, that is, take different number
-of arguments, such as the \texttt{max} function. Let's now try the
-\texttt{echo} function, that prints out its argument (\autoref{lst:printing}).
+of arguments, such as the \lstinline{max} function. Let's now try the
+\lstinline{echo} function, that prints out its argument (\autoref{lst:printing}).
 
 \begin{urbiscript}[caption=Printing out,label=lst:printing]
 echo("Hello world!");
 [00000000] *** Hello world!
 \end{urbiscript}
 
-The server prints out \texttt{Hello world!}, as expected. Note that
+The server prints out \lstinline{Hello world!}, as expected. Note that
 this output is still prepended with the timestamp. Since echo returns
 void, no evaluation result is printed.
 
 \section{Variables}
 
-Variables can be introduced with the \texttt{var} keyword, given a
+Variables can be introduced with the \lstinline{var} keyword, given a
 name and an initial value. They can be assigned new values with the
-\texttt{=} operator (\autoref{lst:variables}).
+\lstinline{=} operator (\autoref{lst:variables}).
 
 \begin{urbiscript}[caption=Using variables,label=lst:variables]
 var x = 42;
@@ -314,7 +314,7 @@ x.isVoid;
 
 \section{Scopes}
 
-Scopes can be introduced with curly brackets (\texttt{\{\}}), and can
+Scopes can be introduced with curly brackets (\lstinline|\{\}|), and can
 contain any number of expressions. Variables declared in a scope only
 exist within this scope (\autoref{lst:scope}).
 
@@ -333,7 +333,7 @@ closing curly bracket.
 
 \section{Method calls}
 
-Methods are called on objects with the dot (\texttt{.}) notation as in
+Methods are called on objects with the dot (\lstinline{.}) notation as in
 \Cxx. Method calls can be chained. Methods with no arguments don't
 require the parentheses (\autoref{lst:method-call}).
 
@@ -352,14 +352,14 @@ require the parentheses (\autoref{lst:method-call}).
 [00000000] 1
 \end{urbiscript}
 
-In \lstinline|obj.method|, we say that \texttt{obj} is the
-\dfn{target}, and that we are sending him the \texttt{method}
+In \lstinline|obj.method|, we say that \lstinline{obj} is the
+\dfn{target}, and that we are sending him the \lstinline{method}
 \dfn{message}.
 
 \section{Function definition}
 
 You know how to call routines, let's learn how to write
-some. Functions can be declared thanks to the \texttt{function}
+some. Functions can be declared thanks to the \lstinline{function}
 keyword, followed by the comma separated, parentheses surrounded list
 of formal arguments, and the body between curly brackets (\autoref{lst:function-def}).
 
@@ -386,8 +386,8 @@ be printing the function you just typed in again. This is because
 function definitions evaluates to the freshly created function.
 
 Since \urbi supports functional programming, function are first class
-citizen. Which means they are values, just as \texttt{0} or
-\texttt{"foobar"}. So your function definition evaluation yields the
+citizen. Which means they are values, just as \lstinline{0} or
+\lstinline{"foobar"}. So your function definition evaluation yields the
 new function, and as always, the interpreter prints out the evaluation
 result, thus showing you the function again. \autoref{lst:function-values}
 might help you understanding this.
@@ -441,8 +441,8 @@ sum(20, 2, 20);
 [00000000] 42
 \end{urbiscript}
 
-As you probably guessed, the \texttt{return} keyword enables you to
-return a value from the function. If no \texttt{return} statement is
+As you probably guessed, the \lstinline{return} keyword enables you to
+return a value from the function. If no \lstinline{return} statement is
 executed, the evaluation of the last expression is returned
 (\autoref{lst:no-return}).
 
@@ -494,12 +494,12 @@ Foo.b;
 \end{urbiscript}
 
 It's as simple as this. Let's now try to build such an object. First,
-we want a fresh object to work on. In \urbi, \texttt{Object} is the
+we want a fresh object to work on. In \urbi, \lstinline{Object} is the
 parent type of every object (in fact, since \urbi is prototype-based,
-\texttt{Object} is the uppermost prototype of every object, but we'll
+\lstinline{Object} is the uppermost prototype of every object, but we'll
 talk about prototypes later). An instance of object, is an empty,
 neutral object, so let's start by instanciating one with the
-\texttt{clone} method of \texttt{Object} (\autoref{lst:object-new}).
+\lstinline{clone} method of \lstinline{Object} (\autoref{lst:object-new}).
 
 \begin{urbiscript}[caption=Instanciating a new object,
   label=lst:object-new, name=object-slots]
@@ -512,8 +512,8 @@ o.slotNames;
 \end{urbiscript}
 
 As you can see, we obtain an empty fresh object. Note that it still
-inherits from \texttt{Object} features that all objects share, such as
-the \texttt{slotNames} method.
+inherits from \lstinline{Object} features that all objects share, such as
+the \lstinline{slotNames} method.
 
 Also note how \lstinline{o} is printed out: \lstinline{Object\_}, followed by an
 hexadecimal number. Since this object is empty, its printing is quite
@@ -523,9 +523,9 @@ and might differ between two executions, they are often filled with
 zeroes in this document.
 
 We're now getting back to our empty object. We want to give it two
-slots, \texttt{a} and \texttt{b}, with values \lstinline|42| and
+slots, \lstinline{a} and \lstinline{b}, with values \lstinline|42| and
 \lstinline|"foo"| respectively. We can do this with the
-\texttt{setSlot} method (\autoref{lst:setslot}), which takes the slot name and
+\lstinline{setSlot} method (\autoref{lst:setslot}), which takes the slot name and
 its value.
 
 \begin{urbiscript}[caption=Defining slots, label=lst:setslot,
@@ -552,13 +552,13 @@ o.b;
 [00000000] "foo"
 \end{urbiscript}
 
-The latter form with \texttt{var} is preferred, but you need to know
+The latter form with \lstinline{var} is preferred, but you need to know
 the name of the slot at the time of writing the code. With the former
 one, you can compute the slot name at execution time. Likewise, you
 can read a slot with a run-time determined name with the
-\texttt{getSlot} method, which takes the slot name as
+\lstinline{getSlot} method, which takes the slot name as
 argument. \autoref{lst:getslot-setslot} illustrates the use of
-\texttt{getSlot} and \texttt{setSlot} to read and write slots whose
+\lstinline{getSlot} and \lstinline{setSlot} to read and write slots whose
 names are unknown at code-writing time.
 
 % mefyl: FIXME: I never introduced that '+' concatenates strings.
@@ -593,10 +593,10 @@ get(x, "bar");
 
 Right, now we can create fresh objects, create slots in them and read
 them afterwards, even if their name is dynamically computed, with
-\texttt{getSlot} and \texttt{setSlot}. Now, you might wonder if
+\lstinline{getSlot} and \lstinline{setSlot}. Now, you might wonder if
 there's a method to update the value of the slot. Guess what, there's
-one, and it's named\ldots \texttt{updateSlot} (originality
-award). Getting back to our \texttt{o} object, let's try to update one
+one, and it's named\ldots \lstinline{updateSlot} (originality
+award). Getting back to our \lstinline{o} object, let's try to update one
 of its slot (\autoref{lst:updateslot}).
 
 \begin{urbiscript}[caption=Updating a slot, label=lst:updateslot,
@@ -609,10 +609,10 @@ o.a;
 [00000000] 51
 \end{urbiscript}
 
-Again, there's a shorthand for \texttt{updateSlot}: operator
-\texttt{=} (\autoref{lst:updateslot-eq}).
+Again, there's a shorthand for \lstinline{updateSlot}: operator
+\lstinline{=} (\autoref{lst:updateslot-eq}).
 
-\begin{urbiscript}[caption=Updating a slot with '\texttt{=}',
+\begin{urbiscript}[caption=Updating a slot with '\lstinline{=}',
   label=lst:updateslot-eq, name=object-slots]
 o.b;
 [00000000] "foo"
@@ -623,13 +623,13 @@ o.b;
 [00000000] "bar"
 \end{urbiscript}
 
-Likewise, you should prefer the '\texttt{=}' notation whenever
-possible, but you'll need \texttt{updateSlot} to update a slot whose
+Likewise, you should prefer the '\lstinline{=}' notation whenever
+possible, but you'll need \lstinline{updateSlot} to update a slot whose
 name you don't know at code-writing time.
 
-Note that defining the same slot twice, be it with \texttt{setSlot} or
-\texttt{var}, is an error. The slot must be defined once with setSlot,
-and subsequent writes must be done with \texttt{updateSlot}
+Note that defining the same slot twice, be it with \lstinline{setSlot} or
+\lstinline{var}, is an error. The slot must be defined once with setSlot,
+and subsequent writes must be done with \lstinline{updateSlot}
 (\autoref{lst:redefinition}).
 
 \begin{urbiscript}[caption=Defining a slot twice is an error,
@@ -679,7 +679,7 @@ equivalent to \lstinline|obj.getSlot("slot")|: if the fetched value is
 executable code such as a function, the dot form evaluates it, as
 illustrated by \autoref{lst:auto-eval}. Inside a method, you can get the
 target with the \lstinline|this| keyword - the equivalent of \Cxx's
-\texttt{this}. \lstinline|this| can be omitted if there is no
+\lstinline{this}. \lstinline|this| can be omitted if there is no
 ambiguity with local variables.
 
 \begin{urbiscript}[caption=Function in object are automatically evaluated,
@@ -717,7 +717,7 @@ interface, since the parentheses are optional.
 This implies that getSlot can be a better tool for object inspection
 to avoid invoking slots, as shown by \autoref{lst:getslot-function}.
 
-\begin{urbiscript}[caption=Inspecting executable slots with \texttt{getSlot},
+\begin{urbiscript}[caption=Inspecting executable slots with \lstinline{getSlot},
 label=lst:getslot-function]
 // The 'empty' method of strings return
 // whether they're the empty string.
@@ -744,8 +744,8 @@ with the equality operator! Let's try getSloting another method in
 [00000000] Primitive_0x0
 \end{urbiscript}
 
-So strings' \texttt{size} method is another type of object, a
-\texttt{Primitive}. These object are executable, just like function,
+So strings' \lstinline{size} method is another type of object, a
+\lstinline{Primitive}. These object are executable, just like function,
 but they are actually primitives implemented in \Cxx, not \urbi. You
 have thus no means to see their inner code.
 
@@ -784,7 +784,7 @@ As you can see, integers are objects just like any other value.
 We are now going to focus on the \urbi value model. That is, how
 values are stored and passed around. The whole point is to understand
 when variables are the same. For this, we are going to introduce a new
-method, \texttt{uid}. This method returns the target's unique
+method, \lstinline{uid}. This method returns the target's unique
 identifier - the same one that was printed when we evaluated
 \lstinline|Object.clone|. See \autoref{lst:uid}. Of course, uids might vary
 from an execution to another, so their value here are dummy, yet not
@@ -804,11 +804,11 @@ o.uid;
 % FIXME: maybe should I introduce == and other basic operator before.
 We can see here that our objects have different uids, meaning they are
 different objects. Note that inputting the same integer twice
-(\texttt{42} here) yields different objects. Let's introduce new
+(\lstinline{42} here) yields different objects. Let's introduce new
 operators before diving in this concept. First the equality operator:
-\texttt{==}. This operator is the exact same as \C or \Cxx's one, it
+\lstinline{==}. This operator is the exact same as \C or \Cxx's one, it
 simply returns whether its two operands are semantically equal. The
-second operator is \texttt{===}, which is the physical equality
+second operator is \lstinline{===}, which is the physical equality
 operator. It returns whether its two operands are the same object,
 which is equivalent to having the same uid. This can seem a bit
 confusing; let's take a look at \autoref{lst:phy-eq} to have a first example.
@@ -825,8 +825,8 @@ a === b;
 [00000000] false
 \end{urbiscript}
 
-Here, the \texttt{==} operator shows us that a and b are equal ---
-indeed, they both evaluate to 42. Yet, the \texttt{===} operator show
+Here, the \lstinline{==} operator shows us that a and b are equal ---
+indeed, they both evaluate to 42. Yet, the \lstinline{===} operator show
 us that they are not the same object, that they are two different
 instances of integers, even if they both equal 42.
 
@@ -964,14 +964,14 @@ will prove handy later. Most of them are inspired by \C/\Cxx.
 
 \section{if}
 
-The \texttt{if} construct is the same has \C/\Cxx's one. The
-\texttt{if} keyword is followed by a condition between parentheses and
-an expression, and optionally the \texttt{else} keyword and another
+The \lstinline{if} construct is the same has \C/\Cxx's one. The
+\lstinline{if} keyword is followed by a condition between parentheses and
+an expression, and optionally the \lstinline{else} keyword and another
 expression. If the condition evaluates to true, the first expression
 is evaluated. Otherwise, the second expression is evaluated if
 present (\autoref{lst:if}).
 
-\begin{urbiscript}[caption=The \texttt{if} construct, label=lst:if]
+\begin{urbiscript}[caption=The \lstinline{if} construct, label=lst:if]
 if (true)
   echo("ok");
 [00000000] *** ok
@@ -985,21 +985,21 @@ else
 Note that \lstinline|if| statements themselves are values
 (\autoref{lst:if-value}).
 
-\begin{urbiscript}[caption=\texttt{if} are values, label=lst:if-value]
+\begin{urbiscript}[caption=\lstinline{if} are values, label=lst:if-value]
 echo({ if (false) "a" else "b" });
 [00000000] *** b
 \end{urbiscript}
 
 \section{while}
 
-The \texttt{while} construct is, again, the same as in \C/\Cxx. The
-\texttt{while} keyword is followed by a condition between parentheses
+The \lstinline{while} construct is, again, the same as in \C/\Cxx. The
+\lstinline{while} keyword is followed by a condition between parentheses
 and an expression. If the expression evaluation is false, the
 execution jumps after the while block; otherwise, the expression is
 evaluated and control jumps before the while block (\autoref{lst:while}).
 
 % FIXME: += wasn't introduced
-\begin{urbiscript}[caption=The \texttt{while} construct,
+\begin{urbiscript}[caption=The \lstinline{while} construct,
 label=lst:while]
 var x = 2;
 [00000000] 2
@@ -1016,7 +1016,7 @@ while (x < 40)
 
 \section{for}
 
-The \texttt{for} construct is still the same as \C/\Cxx one.
+The \lstinline{for} construct is still the same as \C/\Cxx one.
 % FIXME: I don't have the faith to explain for. wanna kill myself.
 
 \begin{urbiscript}[caption=Nihil novi sub sole, label=lst:for]
@@ -1030,15 +1030,15 @@ for (var x = 2; x < 40; x += 10)
 
 \section{for \ldots in}
 
-The \texttt{for ... in} construct enables you to iterate over a
-collection such as a list. The \texttt{for} keyword, followed by
+The \lstinline{for ... in} construct enables you to iterate over a
+collection such as a list. The \lstinline{for} keyword, followed by
 \lstinline|var|, an identifier, a semicolon, an expression and a
 scope, executes the scope for every element in the collection
 resulting of the evaluation of the expression, with the variable named
 with the identifier referring to the list element. If you didn't get
 the sentence, don't worry, \autoref{lst:for-in} is self explanatory.
 
-\begin{urbiscript}[caption=Collection iteration with \texttt{for},
+\begin{urbiscript}[caption=Collection iteration with \lstinline{for},
 label=lst:for-in]
 for (var elt : [1, 2, 3]) { echo(elt) };
 [00000000] *** 1
@@ -1053,10 +1053,10 @@ for (var elt : [1, 2, 3]) { echo(elt) };
 % Likewise, no faith left for switch
 The switch construct is similar to \C/\Cxx's one, except it works on
 any kind of object, not only integral ones. Comparison is done by
-semantic equality (operator \texttt{==}). Execution will jump out of
-the switch after a case has been executed (no need to \texttt{break}).
+semantic equality (operator \lstinline{==}). Execution will jump out of
+the switch after a case has been executed (no need to \lstinline{break}).
 
-\begin{urbiscript}[caption=The \texttt{switch} construct,
+\begin{urbiscript}[caption=The \lstinline{switch} construct,
 label=switch]
 switch ("bar")
 {
@@ -1091,7 +1091,7 @@ echo(o.uid);
 
 The exact same result can be obtained with a short do scope, that
 redirect method calls to their target, as in \autoref{lst:do}. This is similar
-to the \pascal ``\texttt{with}'' construct.
+to the \pascal ``\lstinline{with}'' construct.
 
 
 \begin{urbiscript}[caption=Shorter with a do block,label=lst:do]
@@ -1269,7 +1269,7 @@ programming was introduced by the Self language, and is used in
 several popular script languages such as \io or \js.
 
 Consider pairs for instance. Pairs are objects that hold two values,
-first and second, like an \texttt{std$::$pair} in \Cxx. Since \urbi is
+first and second, like an \lstinline{std$::$pair} in \Cxx. Since \urbi is
 prototype-based, there is no pair class. Instead, \lstinline|Pair| is
 really a pair (\autoref{lst:proto}).
 
@@ -1315,7 +1315,7 @@ var after = Pair.clone;
 In prototype-based language, 'is-a' relations (being an instance of
 some type) and inheritance relations (extending another type) are
 simplified in a single relation: prototyping. You can inspect an
-object prototypes with the \texttt{protos} method (\autoref{lst:protos}).
+object prototypes with the \lstinline{protos} method (\autoref{lst:protos}).
 
 \begin{urbiscript}[caption=Inspecting prototypes, label=lst:protos,
   name=protos]
@@ -1339,7 +1339,7 @@ p.protos.head === Pair;
 \end{urbiscript}
 
 Prototypes are the base of the slot lookup mechanism. Slot lookup is
-the action of finding an object slot when \texttt{getSlot} or the dot
+the action of finding an object slot when \lstinline{getSlot} or the dot
 notation is used. So far, when we typed \lstinline|obj.slot|, ``slot''
 was always a slot of \lstinline|obj|.
 Yet, this call can be valid even if obj has
@@ -1366,13 +1366,13 @@ p.protos.head === Pair;
 [00000000] true
 \end{urbiscript}
 
-As shown here, the \texttt{clone} method simply creates an empty
+As shown here, the \lstinline{clone} method simply creates an empty
 object, with its target as prototype. The new object has the exact
 same behavior as the cloned on thanks to slot lookup.
 
 Let's experience slot lookup by ourselves. In \urbi, you can add and
-remove prototypes from an object thanks to \texttt{addProto} and
-\texttt{removeProto}.
+remove prototypes from an object thanks to \lstinline{addProto} and
+\lstinline{removeProto}.
 
 \begin{urbiscript}[caption=Manipulating prototypes, label=lst:proto-change]
 // We create a fresh object
@@ -1441,7 +1441,7 @@ o.x;
 \end{urbiscript}
 
 You can check where in the prototype hierarchy a slot is found with
-the \texttt{locateSlot} method (\autoref{lst:locateslot}). This is a very
+the \lstinline{locateSlot} method (\autoref{lst:locateslot}). This is a very
 handful tool when inspecting an object.
 
 \begin{urbiscript}[caption=Using locateSlot, label=lst:locateslot]
@@ -1458,7 +1458,7 @@ p.locateSlot("locateSlot");
 You can see here that the prototype model is rather simple. Obtaining
 a fresh object simply consist in cloning a model object, a prototype,
 that was provided to you. Moreover, you can add behavior to an object
-at any time with a simple \texttt{addProto}: you can make any object a
+at any time with a simple \lstinline{addProto}: you can make any object a
 fully functional Pair with a simple \lstinline|myObj.addProto(Pair)|.
 
 \section{Copy on write}
@@ -1524,13 +1524,13 @@ slot of our fresh Pair, we didn't alter Pair one all its other clones.
 
 Now that we know the internals of \urbi's object model, we can start
 defining our own classes. For instance, we can define our own
-\texttt{Pair} class. We just have to create a pair, with its first and
-second slots. For this we use the \texttt{do} scope described in
+\lstinline{Pair} class. We just have to create a pair, with its first and
+second slots. For this we use the \lstinline{do} scope described in
 \autoref{section:constructs/do}. \autoref{lst:do-class}) defines a new
-\texttt{Pair} class. The \texttt{asString} function is simply used to
+\lstinline{Pair} class. The \lstinline{asString} function is simply used to
 customize pairs printing - don't give it too much attention for now.
 
-\begin{urbiscript}[caption=Defining our own \texttt{MyPair} class,
+\begin{urbiscript}[caption=Defining our own \lstinline{MyPair} class,
   label=lst:do-class]
 var MyPair = Object.clone;
 [00000000] Object_0x1
@@ -1559,9 +1559,9 @@ MyPair;
 
 That's it, we defined a pair that can be cloned at will! \urbi
 provides a shorthand to define classes as we did above: the
-\texttt{class} keyword (\autoref{lst:class}).
+\lstinline{class} keyword (\autoref{lst:class}).
 
-\begin{urbiscript}[caption=Using the \texttt{class} construct,
+\begin{urbiscript}[caption=Using the \lstinline{class} construct,
   label=lst:class, name=my-pair]
 class MyPair
 {
@@ -1572,7 +1572,7 @@ class MyPair
 [00000000] (nil, nil)
 \end{urbiscript}
 
-The \texttt{class} keyword simply creates MyPair with Object.clone,
+The \lstinline{class} keyword simply creates MyPair with Object.clone,
 and provides you with a \lstinline|do (MyPair)| scope. It actually also
 predefines a few slots, but this is not the point here.
 
@@ -1580,23 +1580,23 @@ predefines a few slots, but this is not the point here.
 \label{sec:tut:ctor}
 As we've seen, we can use the clone method on any object to obtain an
 identical object. Yet, some class provide more elaborated
-constructors, accessible by calling \texttt{new} instead of
-\texttt{clone}, potentially passing it arguments (\autoref{lst:pair-ctor}).
+constructors, accessible by calling \lstinline{new} instead of
+\lstinline{clone}, potentially passing it arguments (\autoref{lst:pair-ctor}).
 
-\begin{urbiscript}[caption=Calling constructors with \texttt{new},
+\begin{urbiscript}[caption=Calling constructors with \lstinline{new},
 label=lst:pair-ctor]
 var p = Pair.new("foo", false);
 [00000000] ("foo", false)
 \end{urbiscript}
 
-While \texttt{clone} guarantees you obtain a empty fresh object
-inheriting from the prototype, \texttt{new} behavior is left to the
+While \lstinline{clone} guarantees you obtain a empty fresh object
+inheriting from the prototype, \lstinline{new} behavior is left to the
 discretion of the cloned prototype --- although its behavior is the
-same as \texttt{clone} by default.
+same as \lstinline{clone} by default.
 
 To define such constructors, prototypes only need to provide an
-\texttt{init} method, that will be called with the arguments given to
-new. For instance, we can improve our previous \texttt{Pair} class
+\lstinline{init} method, that will be called with the arguments given to
+new. For instance, we can improve our previous \lstinline{Pair} class
 with a constructor (\autoref{lst:define-ctor}).
 
 \begin{urbiscript}[caption=Defining constructors,
@@ -1630,7 +1630,7 @@ lambda expressions.
 just like an integer or a string, enabling you to store them or pass
 them as arguments. For instance, you don't need to write
 \lstinline|function object.f(){/* ... */}| to insert a function in an
-object, you can simply use \texttt{setSlot}, as illustrated by
+object, you can simply use \lstinline{setSlot}, as illustrated by
 \autoref{lst:first-class-functions}.
 
 % FIXME: doesn't work, toplevel, puke, etc
@@ -1648,13 +1648,13 @@ o.m2;
 \end{urbiscript}
 
 This enables to write powerful pieces of code, like functions that
-take function as argument. For instance, consider the \texttt{all}
+take function as argument. For instance, consider the \lstinline{all}
 function: given a list and a function, it applies the function to each
 element of the list, and returns whether all calls returned true. This
 enables to check very simply if all elements in a list verify a
 predicate (\autoref{lst:all}).
 
-\begin{urbiscript}[caption=Functional programming: the \texttt{all}
+\begin{urbiscript}[caption=Functional programming: the \lstinline{all}
   function, label=lst:all, name=all]
 function all(list, predicate)
 {
@@ -1687,7 +1687,7 @@ all([1, 2, 3], function (x) { x > 0});
 [00000000] true
 \end{urbiscript}
 
-In fact, the \texttt{function} construct we saw earlier is only a
+In fact, the \lstinline{function} construct we saw earlier is only a
 shorthand for a variable assignment (\autoref{lst:function-sugar}).
 
 \begin{lstlisting}[caption=The function sugar,
@@ -1708,7 +1708,7 @@ use lazy evaluation: argument are evaluated by the function only when
 needed. In \urbi, evaluation is strict by default, but you can ask a
 function not to evaluate its arguments, and do it by hand. This works
 by not specifying formal arguments. The function is provided with a
-\texttt{call} object that enables you to evaluate arguments
+\lstinline{call} object that enables you to evaluate arguments
 (\autoref{lst:lazy}).
 
 \begin{urbiscript}[caption=Tweaking arguments evaluation,
@@ -1733,7 +1733,7 @@ reverse(echo("first"), echo("second"));
 
 A good example are logic operators. Although \Cxx is a strict
 language, it uses a few logic operators. For instance, the logical and
-(\texttt{\&\&}) does not evaluate its right operand if the left
+(\lstinline{\&\&}) does not evaluate its right operand if the left
 operand is false (the result will be false anyway).
 
 \urbi logic operator mimic this behavior. \autoref{lst:short-circuits} shows
@@ -1777,21 +1777,21 @@ agents, such as robotics or \ai.
 \section{Parralelism operators}
 
 For now, we've separated our different commands with a semicolon
-(\texttt{;}). There are actually other separators in \urbi:
+(\lstinline{;}). There are actually other separators in \urbi:
 
 \begin{itemize}
-\item ``\texttt{;}'': Serialization operator. Wait for the left
+\item ``\lstinline{;}'': Serialization operator. Wait for the left
   operand to finish before continuing.
-\item ``\texttt{\&}'': Parallelism n-ary operator. All operands are
-  started simultaneously, and executed in parallel. The \texttt{\&}
-  block itself finishes when both operands finish. \texttt{\&} has
+\item ``\lstinline{\&}'': Parallelism n-ary operator. All operands are
+  started simultaneously, and executed in parallel. The \lstinline{\&}
+  block itself finishes when both operands finish. \lstinline{\&} has
   higher precedence than other separators.
-\item ``\texttt{,}'': Background operator. Left operand is started,
+\item ``\lstinline{,}'': Background operator. Left operand is started,
   and evaluation continues immediately. End of execution of the left
   operand is waited at the exit of the scope.
 \end{itemize}
 
-\autoref{lst:parallelism-operators} show usage of \texttt{\&} to launch two
+\autoref{lst:parallelism-operators} show usage of \lstinline{\&} to launch two
 functions in parallel.
 
 \begin{urbiscript}[caption=Parallelism operator,
@@ -1826,22 +1826,22 @@ test("left") & test("middle") & test ("right");
 [00000000] *** right: 3
 \end{urbiscript}
 
-In this test, we see that the \texttt{\&} runs its operands
+In this test, we see that the \lstinline{\&} runs its operands
 simultaneously.
 
-The difference between ``\texttt{\&}'' and ``\texttt{,}'' is rather
+The difference between ``\lstinline{\&}'' and ``\lstinline{,}'' is rather
 subtle:
 
 \begin{itemize}
 \item In the toplevel, will wait for you to terminate your
-  ``\texttt{\&}'' block to start executing anything, while it will run
-  the code terminated by ``\texttt{,}'' immediately.
-\item Execution is blocked after a ``\texttt{\&}'' group until all its
+  ``\lstinline{\&}'' block to start executing anything, while it will run
+  the code terminated by ``\lstinline{,}'' immediately.
+\item Execution is blocked after a ``\lstinline{\&}'' group until all its
   children have finished (\autoref{lst:and-comma}).
 \end{itemize}
 
-\begin{urbiscript}[caption=Difference between ``\texttt{\&}'' and
-``\texttt{,}'', label=lst:and-comma, name=parallel]
+\begin{urbiscript}[caption=Difference between ``\lstinline{\&}'' and
+``\lstinline{,}'', label=lst:and-comma, name=parallel]
 // This runs test and echo("right") in parallel,
 // and wait until both are done before continuing
 test("left") & echo("right"); echo("done");
@@ -1866,8 +1866,8 @@ include parallelism anywhere at no syntactical cost.
 
 \section{Detach}
 
-The \texttt{detach} function backgrounds the execution of its
-argument. Its behavior is the same as the comma (\texttt{,}) operator,
+The \lstinline{detach} function backgrounds the execution of its
+argument. Its behavior is the same as the comma (\lstinline{,}) operator,
 except the execution is completely detached, and not waited for at the
 end of the scope (\autoref{lst:detach}).
 
@@ -1889,7 +1889,7 @@ sleep(1s);
 
 Tags are a multipurpose code execution control and instrumentation
 feature. Any chunk of code can be tagged, by preceding it with a tag
-and a colon (\texttt{$:$}). Tag can be created with
+and a colon (\lstinline{$:$}). Tag can be created with
 \lstinline|Tag.new("name")|. Giving tags a name is optional, yet it's
 probably a better idea since it will be used for many
 features. \autoref{lst:tagging} illustrates how to tag chunks of code.
@@ -1911,7 +1911,7 @@ mytag: echo("tagged");
 
 You can use tag that wasn't declared previously, they will be created
 implicitly (\autoref{lst:implicit-tag}). However, this is fragile code since
-tags will be created in a global scope, the \texttt{Tag} object. This
+tags will be created in a global scope, the \lstinline{Tag} object. This
 feature can be used when inputting test code in the toplevel to avoid
 bothering to declare each tag, yet it should be considered very bad
 practice in regular code.
@@ -1929,19 +1929,19 @@ tags is to be able to control the execution of code running in
 parallel. Tags have a few control methods:
 
 \begin{itemize}
-\item \texttt{freeze}: Suspend execution of all tagged code.
-\item \texttt{unfreeze}: Resume execution of previously frozen code.
-\item \texttt{stop}: Stop the execution of the tagged code. The flows
+\item \lstinline{freeze}: Suspend execution of all tagged code.
+\item \lstinline{unfreeze}: Resume execution of previously frozen code.
+\item \lstinline{stop}: Stop the execution of the tagged code. The flows
   of execution that where stopped jump immediately at the end of the
   tagged block.
-\item \texttt{block}: Block the execution of the tagged code, that is:
+\item \lstinline{block}: Block the execution of the tagged code, that is:
   \begin{itemize}
   \item Stop it.
   \item When an execution flow encounters the tagged block, it simply
     skips it.
   \end{itemize}
-  You can think of block like a permanent stop.
-\item \texttt{unblock}: Stop blocking the tagged code.
+  You can think of \lstinline{block} like a permanent \lstinline{stop}.
+\item \lstinline{unblock}: Stop blocking the tagged code.
 \end{itemize}
 
 \autoref{lst:freeze}, \autoref{lst:stop} and \autoref{lst:block}
@@ -2041,7 +2041,7 @@ sleep(4s);
 In this section, we implement a more advanced example with
 parallelism.
 
-\autoref{lst:timeout} presents how to implement a \texttt{timeOut}
+\autoref{lst:timeout} presents how to implement a \lstinline{timeOut}
 function, that takes code to execute and a timeout as arguments. It
 executes the code, and returns its value. However, if the code
 execution takes longer than the given timeout, it aborts it, print
@@ -2094,7 +2094,7 @@ a condition, and an expression, \lstinline|at| will evaluate the
 expression every time the condition becomes true (\autoref{lst:at}). That is,
 when a rising edge occurs on the condition.
 
-\begin{urbiscript}[caption=Using \texttt{at}, label=lst:at]
+\begin{urbiscript}[caption=Using \lstinline{at}, label=lst:at]
 var x = 0;
 [00000000] 0
 at (x > 5)
@@ -2122,7 +2122,7 @@ An \lstinline|onleave| block can be appended to execute an expression
 when the expression \emph{becomes} false --- that is, on falling edges
 (\autoref{lst:onleave}).
 
-\begin{urbiscript}[caption=Using \texttt{at ... onleave}, label=lst:onleave]
+\begin{urbiscript}[caption=Using \lstinline{at ... onleave}, label=lst:onleave]
 var x = false;
 [00000000] false
 at (x)
@@ -2141,7 +2141,7 @@ The \lstinline|whenever| construct is similar to \lstinline|at|,
 except the expression evaluation is systematically restarted when it
 finishes as long as the condition stands true (\autoref{lst:whenever}).
 
-\begin{urbiscript}[caption=Using \texttt{whenever}, label=lst:whenever]
+\begin{urbiscript}[caption=Using \lstinline{whenever}, label=lst:whenever]
 var x = false;
 [00000000] false
 whenever (x)
@@ -2165,7 +2165,7 @@ Just like \lstinline|at| has \lstinline|onleave|, \lstinline|whenever|
 has \lstinline|else|: the given expression is evaluated as long as the
 condition is false (\autoref{lst:whenever-else}).
 
-\begin{urbiscript}[caption=Using \texttt{whenever ... else},
+\begin{urbiscript}[caption=Using \lstinline{whenever ... else},
   label=lst:whenever-else]
 var x = false;
 [00002000] false
